# cli-template-rs

./: Cargo.toml  README.md  cargo-generate.toml
src/: main.rs
